--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup Docker Environment
-      run: docker-compose -f docker-compose.ci.yml up -d
+      run: docker-compose -f docker-compose.yml up -d
 
     - name: Install Composer Dependencies
       run: docker-compose exec laravel.test composer install --prefer-dist --no-progress --no-suggest
