--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,4 +43,4 @@ jobs:
 
     - name: Shutdown Docker Environment
       if: always()
-      run: docker-compose -f docker-compose.ci.yml down
+      run: docker-compose -f docker-compose.yml down
