--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Docker environment
-      run: docker-compose up -d
+      run: docker-compose up -d docker-compose.ci.yml
     - name: Install dependencies
       run: docker-compose exec app composer install
     - name: Run migrations
@@ -29,4 +29,4 @@ jobs:
       run: docker-compose exec app vendor/bin/phpunit
       if: always()
     - name: Turn down
-      run: docker-compose -f docker-compose.yml down
+      run: docker-compose -f docker-compose.ci.yml down
