--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Docker environment
-      run: docker-compose up -d docker-compose.ci.yml
+      run: docker-compose -f docker-compose.ci.yml up -d
     - name: Install dependencies
       run: docker-compose exec app composer install
     - name: Run migrations
