--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,6 +21,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Docker environment
       run: docker-compose -f docker-compose.ci.yml up -d
+    - name: Adjust permissions
+      run: docker-compose exec app chown -R www-data:www-data /var/www
     - name: Install dependencies
       run: docker-compose exec app composer install -v
     - name: Run migrations
