--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,14 +21,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Docker environment
       run: docker-compose -f docker-compose.ci.yml up -d
-    - name: Adjust permissions
-      run: docker-compose exec app chown -R www-data:www-data /var/www
     - name: Install dependencies
-      run: docker-compose exec app composer install -v
+      run: docker-compose exec composer install -v
     - name: Run migrations
-      run: docker-compose exec app php artisan migrate
+      run: docker-compose exec php artisan migrate
     - name: Run tests
-      run: docker-compose exec app vendor/bin/phpunit
+      run: docker-compose exec vendor/bin/phpunit
     - name: Turn down
       if: always()
       run: docker-compose -f docker-compose.ci.yml down
