--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Set up Docker environment
       run: docker-compose -f docker-compose.ci.yml up -d
     - name: Install dependencies
-      run: composer install -v
+      run: docker-compose -f docker-compose.ci.yml exec app composer install -v
     - name: update dependencies
-      run: composer update
+      run: docker-compose -f docker-compose.ci.yml exec app composer update
     - name: Run migrations
       run: php artisan migrate
     - name: Run tests
