--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,9 +21,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Docker environment
       run: docker-compose -f docker-compose.ci.yml up -d
+    - name: Copy environment file
+      run: cp .env.example .env
     - name: Setup Laravel environment
       run: |
-        cp .env.example .env
         echo "DB_PORT=3306" >> .env
         echo "DB_DATABASE=laravel" >> .env
         echo "DB_USERNAME=root" >> .env
