--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Docker environment
       run: docker-compose -f docker-compose.ci.yml up -d
     - name: Install dependencies
-      run: docker-compose -f docker-compose.ci.yml exec app composer install -v
+      run: docker-compose -f docker-compose.ci.yml exec -T app composer install -v
     - name: update dependencies
       run: docker-compose -f docker-compose.ci.yml exec app composer update
     - name: Run migrations
