--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,10 +23,8 @@ jobs:
       run: docker-compose -f docker-compose.ci.yml up -d
     - name: Install dependencies
       run: docker-compose -f docker-compose.ci.yml exec -T app composer install -v
-    - name: update dependencies
-      run: docker-compose -f docker-compose.ci.yml exec app composer update
     - name: Run migrations
-      run: php artisan migrate
+      run: docker-compose -f docker-compose.ci.yml exec -T app php artisan migrate
     - name: Run tests
       run: ./vendor/bin/phpunit
     - name: Turn down
