feat: added components and tailwindcss configuration

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -21,5 +21,7 @@ services:
     environment:
       MYSQL_DATABASE: laravel
       MYSQL_ROOT_PASSWORD: secret
+      MYSQL_USER: root
+      MYSQL_PASSWORD: secret
     ports:
       - "3307:3306"
