--- a/resources/react/package.json
+++ b/resources/react/package.json
@@ -20,5 +20,10 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "vite": "^5.2.10"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
